syntax = "proto3";
package ut.payments;

option go_package = "github.com/universaltill/addon-sdk-go/proto/payments;payments";

service Payments {
  rpc Metadata(Empty) returns (AddonMeta);
  rpc CreateIntent(CreateIntentRequest) returns (CreateIntentResponse);
  rpc StartPayment(StartPaymentRequest) returns (StartPaymentResponse);
  rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
  rpc CancelIntent(CancelIntentRequest) returns (CancelIntentResponse);
  rpc Refund(RefundRequest) returns (RefundResponse);
}

message Empty {}

message Money { string currency = 1; int64 amount = 2; }
message CreateIntentRequest { Money total = 1; string reference = 2; map<string,string> meta = 3; }
message CreateIntentResponse { string intent_id = 1; string provider_ref = 2; }

message StartPaymentRequest { string intent_id = 1; string method = 2; }
message StartPaymentResponse {
  enum Mode { UNKNOWN = 0; TERMINAL = 1; QR = 2; WEB = 3; }
  Mode mode = 1;
  bytes qr_image_png = 2;
  string redirect_url = 3;
  bool requires_polling = 4;
}

message GetStatusRequest { string intent_id = 1; }
message GetStatusResponse {
  enum State { PENDING=0; AUTHORIZED=1; CAPTURED=2; FAILED=3; CANCELED=4; REFUNDED=5; PARTIAL_REFUNDED=6; }
  State state = 1;
  string failure_code = 2;
  string failure_message = 3;
  string receipt_text = 4;
  string network_txn_id = 5;
  map<string,string> meta = 6;
}

message CancelIntentRequest { string intent_id = 1; }
message CancelIntentResponse {}

message RefundRequest { string capture_id = 1; Money amount = 2; string reason = 3; }
message RefundResponse { string refund_id = 1; }

message AddonMeta {
  string name = 1;
  string version = 2;
  repeated string methods = 3;
  bool pci_out_of_scope = 4;
  repeated string regions = 5;
}
